--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import astropy.io.fits as ap_fits\n",
     "import astropy.modeling as ap_mod\n",
     "import copy\n",
+    "import inspect\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -380,11 +381,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'echo010_fixing_invalids': <function echo010_fixing_invalids at 0x000002489EB9DC80>, 'echo120_subarray_mask': <function echo120_subarray_mask at 0x000002489EB9DEA0>, 'echo270_minimum_cut': <function echo270_minimum_cut at 0x000002489EBAD048>, 'echo271_maximum_cut': <function echo271_maximum_cut at 0x000002489EBAD598>, 'echo275_pixel_truncation': <function echo275_pixel_truncation at 0x000002489EBAD620>, 'echo276_percent_truncation': <function echo276_percent_truncation at 0x000002489EBAD6A8>, 'echo380_single_pixels': <function echo380_single_pixels at 0x000002489EBAD1E0>, 'echo381_rectangle_mask': <function echo381_rectangle_mask at 0x000002489EBAD2F0>, 'echo382_column_mask': <function echo382_column_mask at 0x000002489EBAD378>, 'echo383_row_mask': <function echo383_row_mask at 0x000002489EBAD400>, 'echo398_nothing': <function echo398_nothing at 0x000002489EBAD488>, 'echo399_everything': <function echo399_everything at 0x000002489EBAD510>}\n"
+     ]
+    }
+   ],
    "source": [
-    "?ax.text"
+    "config = ifa.yankee.SmeargleConfig()\n",
+    "function_000_list = dict(inspect.getmembers(ifa.echo.masks_echo000,inspect.isfunction))\n",
+    "function_100_list = dict(inspect.getmembers(ifa.echo.masks_echo100,inspect.isfunction))\n",
+    "function_200_list = dict(inspect.getmembers(ifa.echo.masks_echo200,inspect.isfunction))\n",
+    "function_300_list = dict(inspect.getmembers(ifa.echo.masks_echo300,inspect.isfunction))\n",
+    "\n",
+    "function_list = {**{**function_000_list,**function_100_list},**{**function_200_list,**function_300_list}}\n",
+    "\n",
+    "filter_list = copy.deepcopy(function_list)\n",
+    "for keydex,valuedex in function_list.items():\n",
+    "    if (not 'echo' in keydex):\n",
+    "        del filter_list[keydex]\n",
+    "\n",
+    "print(filter_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "echo010\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_list = dict(inspect.getmembers(config.EchoConfig))\n",
+    "new_param = copy.deepcopy(param_list)\n",
+    "for keydex,valuedex in param_list.items():\n",
+    "    if (not 'echo' in keydex):\n",
+    "        del new_param[keydex]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_param['echo010_config']['run']"
    ]
   },
   {
@@ -400,6 +463,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
