Somehow, there were issues with git. Bravo and its data organization was copmpleted. A few bugs were fixed with ECHO, and meta gained the ability to write fits files.

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -10,6 +10,7 @@
     "import astropy.io.fits as ap_fits\n",
     "import astropy.modeling as ap_mod\n",
     "import copy\n",
+    "import glob\n",
     "import inspect\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +35,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-dce7b3e18c74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfits\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mheader\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mifa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeta\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfits_and_arrays\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msmeargle_open_fits_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"190510_T40K_2hrdark_2.5VdetBias_up_16avg_GN_CDS_ADU_per_ksec.fits\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-2-dce7b3e18c74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfits\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mheader\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mifa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeta\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfits_and_arrays\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msmeargle_open_fits_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"190510_T40K_2hrdark_2.5VdetBias_up_16avg_GN_CDS_ADU_per_ksec.fits\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\meta\\fits_and_arrays.py\u001b[0m in \u001b[0;36msmeargle_open_fits_file\u001b[1;34m(file_name, extension)\u001b[0m\n\u001b[0;32m     37\u001b[0m     \"\"\"\n\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0map_fits\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mhdul\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m         \u001b[0mhdu_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhdul\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\.conda\\envs\\Anaconda\\lib\\site-packages\\astropy\\io\\fits\\hdu\\hdulist.py\u001b[0m in \u001b[0;36mfitsopen\u001b[1;34m(name, mode, memmap, save_backup, cache, lazy_load_hdus, **kwargs)\u001b[0m\n\u001b[0;32m    149\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    150\u001b[0m     return HDUList.fromfile(name, mode, memmap, save_backup, cache,\n\u001b[1;32m--> 151\u001b[1;33m                             lazy_load_hdus, **kwargs)\n\u001b[0m\u001b[0;32m    152\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    153\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\.conda\\envs\\Anaconda\\lib\\site-packages\\astropy\\io\\fits\\hdu\\hdulist.py\u001b[0m in \u001b[0;36mfromfile\u001b[1;34m(cls, fileobj, mode, memmap, save_backup, cache, lazy_load_hdus, **kwargs)\u001b[0m\n\u001b[0;32m    388\u001b[0m         return cls._readfrom(fileobj=fileobj, mode=mode, memmap=memmap,\n\u001b[0;32m    389\u001b[0m                              \u001b[0msave_backup\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msave_backup\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcache\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcache\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 390\u001b[1;33m                              lazy_load_hdus=lazy_load_hdus, **kwargs)\n\u001b[0m\u001b[0;32m    391\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    392\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -448,6 +449,130 @@
    ],
    "source": [
     "new_param['echo010_config']['run']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\bravo\\renaming.py:61: TimeWarning: Archiving and copying particularly a lot of large fits files may take a very long time. It is still suggested, but do outside Python. Disable via < copy_data=False >.\n",
+      "  smeargle_warning(TimeWarning,(\"Archiving and copying particularly a lot of large fits \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pure archive of data is stored in  < ./Data/BravoArchive__20190626_142110.zip >\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['detBias;1Vbot_001',\n",
+       " 'detBias;2Vupp_002',\n",
+       " 'detBias;3Vupp_003',\n",
+       " 'detBias;4Vupp_004',\n",
+       " 'detBias;5Vupp_005',\n",
+       " 'detBias;6Vupp_006',\n",
+       " 'detBias;7Vupp_007',\n",
+       " 'detBias;8Vupp_008',\n",
+       " 'detBias;9Vtop_009',\n",
+       " 'detBias;1Vbot_010',\n",
+       " 'detBias;2Vupp_011',\n",
+       " 'detBias;3Vupp_012',\n",
+       " 'detBias;4Vupp_013',\n",
+       " 'detBias;5Vupp_014',\n",
+       " 'detBias;6Vupp_015',\n",
+       " 'detBias;7Vupp_016',\n",
+       " 'detBias;8Vupp_017',\n",
+       " 'detBias;9Vtop_018',\n",
+       " 'detBias;1Vbot_019',\n",
+       " 'detBias;2Vupp_020',\n",
+       " 'detBias;3Vupp_021',\n",
+       " 'detBias;4Vupp_022',\n",
+       " 'detBias;5Vupp_023',\n",
+       " 'detBias;6Vupp_024',\n",
+       " 'detBias;7Vupp_025',\n",
+       " 'detBias;8Vupp_026',\n",
+       " 'detBias;9Vtop_027',\n",
+       " 'detBias;1Vbot_028',\n",
+       " 'detBias;2Vupp_029']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ifa.bravo.rename.voltage_pattern_rename_fits('./Data/',[1,2,3,4,5,6,7,8,9],\n",
+    "                                             common_prefix='190510_T40K_2hrdark',common_suffix='blew.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_names = glob.glob('./Data' + '/*.fits')\n",
+    "#print(original_names)\n",
+    "\n",
+    "hdu_file, header, data = ifa.meta.meta_faa.smeargle_open_fits_file(original_names[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256, 320)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median_data = np.median(data,axis=0)\n",
+    "median_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x000002722256D240>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ifa.bravo.end_ave.average_endpoints(original_names[0],16,16,5)"
    ]
   },
   {
