--- a/Action.ipynb
+++ b/Action.ipynb
@@ -227,6 +227,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "[1, 3, 5, 7, 9, 7, 5, 3, 1, 9, 1, 5]\n",
+      "['up', 'up', 'up', 'up', 'peak', 'down', 'down', 'down', 'trough', 'peak', 'trough', 'peak']\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
