Added a small bit of input validation for endpoint averaging.

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,61 +460,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\bravo\\renaming.py:61: TimeWarning: Archiving and copying particularly a lot of large fits files may take a very long time. It is still suggested, but do outside Python. Disable via < copy_data=False >.\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\bravo\\renaming.py:68: TimeWarning: Archiving and copying particularly a lot of large fits files may take a very long time. It is still suggested, but do outside Python. Disable via < copy_data=False >.\n",
       "  smeargle_warning(TimeWarning,(\"Archiving and copying particularly a lot of large fits \"\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pure archive of data is stored in  < ./Data/BravoArchive__20190626_142110.zip >\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['detBias;1Vbot_001',\n",
-       " 'detBias;2Vupp_002',\n",
-       " 'detBias;3Vupp_003',\n",
-       " 'detBias;4Vupp_004',\n",
-       " 'detBias;5Vupp_005',\n",
-       " 'detBias;6Vupp_006',\n",
-       " 'detBias;7Vupp_007',\n",
-       " 'detBias;8Vupp_008',\n",
-       " 'detBias;9Vtop_009',\n",
-       " 'detBias;1Vbot_010',\n",
-       " 'detBias;2Vupp_011',\n",
-       " 'detBias;3Vupp_012',\n",
-       " 'detBias;4Vupp_013',\n",
-       " 'detBias;5Vupp_014',\n",
-       " 'detBias;6Vupp_015',\n",
-       " 'detBias;7Vupp_016',\n",
-       " 'detBias;8Vupp_017',\n",
-       " 'detBias;9Vtop_018',\n",
-       " 'detBias;1Vbot_019',\n",
-       " 'detBias;2Vupp_020',\n",
-       " 'detBias;3Vupp_021',\n",
-       " 'detBias;4Vupp_022',\n",
-       " 'detBias;5Vupp_023',\n",
-       " 'detBias;6Vupp_024',\n",
-       " 'detBias;7Vupp_025',\n",
-       " 'detBias;8Vupp_026',\n",
-       " 'detBias;9Vtop_027',\n",
-       " 'detBias;1Vbot_028',\n",
-       " 'detBias;2Vupp_029']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -524,19 +479,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[37718.,  8704., 37041., ..., 10657., 37633., 37621.],\n",
+       "        [37321.,  8704., 38074., ..., 10657., 37026., 37024.],\n",
+       "        [37999.,  8704., 36929., ..., 10659., 36661., 38365.],\n",
+       "        ...,\n",
+       "        [37127.,  8192., 38301., ..., 10657., 36926., 37343.],\n",
+       "        [37662.,  9216., 36954., ..., 10659., 36534., 37999.],\n",
+       "        [37195., 10240., 36716., ..., 10659., 36196., 37118.]],\n",
+       "\n",
+       "       [[34120.,  5120., 33380., ..., 10657., 33820., 33869.],\n",
+       "        [33728.,  4608., 34405., ..., 10658., 32761., 33332.],\n",
+       "        [34365.,  4096., 33266., ..., 10656., 32843., 34579.],\n",
+       "        ...,\n",
+       "        [33738.,  4096., 34770., ..., 10657., 32949., 33377.],\n",
+       "        [34396.,  8704., 33630., ..., 10655., 32818., 34263.],\n",
+       "        [34051.,  8192., 33649., ..., 10658., 32630., 33376.]],\n",
+       "\n",
+       "       [[33708.,  4096., 32977., ..., 10654., 33380., 33436.],\n",
+       "        [33317.,  8192., 33996., ..., 10659., 31855., 32894.],\n",
+       "        [33966.,  4096., 32839., ..., 10659., 32447., 34148.],\n",
+       "        ...,\n",
+       "        [33340.,  4096., 34344., ..., 10655., 32529., 33001.],\n",
+       "        [33993.,  8192., 33211., ..., 10660., 32391., 33837.],\n",
+       "        [33671.,  8192., 33261., ..., 10659., 32206., 32948.]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[23992.,     0., 15575., ..., 10562., 16910., 21551.],\n",
+       "        [20025.,     0., 26014., ..., 10507., 14837., 20757.],\n",
+       "        [25547.,     0., 14285., ..., 10654., 25122., 27074.],\n",
+       "        ...,\n",
+       "        [26178.,     0., 14711., ..., 10573., 23589., 28017.],\n",
+       "        [28833.,     0., 25401., ..., 10598., 25505., 28210.],\n",
+       "        [30079.,  4096., 26677., ...,  9956., 18127., 29042.]],\n",
+       "\n",
+       "       [[23995.,     0., 15567., ..., 10561., 16920., 21561.],\n",
+       "        [20024.,     0., 26016., ..., 10509., 14892., 20792.],\n",
+       "        [25559.,  1024., 14329., ..., 10653., 25141., 27083.],\n",
+       "        ...,\n",
+       "        [26185.,  2048., 14703., ..., 10575., 23582., 28009.],\n",
+       "        [28824.,     0., 25402., ..., 10598., 25506., 28208.],\n",
+       "        [30080.,  4096., 26677., ...,  9956., 18078., 29027.]],\n",
+       "\n",
+       "       [[23985.,     0., 15551., ..., 10559., 16962., 21582.],\n",
+       "        [20038.,     0., 26020., ..., 10508., 14863., 20768.],\n",
+       "        [25553.,   512., 14310., ..., 10653., 25138., 27087.],\n",
+       "        ...,\n",
+       "        [26180.,   512., 14711., ..., 10571., 23608., 28022.],\n",
+       "        [28815.,     0., 25403., ..., 10598., 25506., 28203.],\n",
+       "        [30083.,  4608., 26680., ...,  9956., 18041., 28999.]]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "original_names = glob.glob('./Data' + '/*.fits')\n",
     "#print(original_names)\n",
     "\n",
-    "hdu_file, header, data = ifa.meta.meta_faa.smeargle_open_fits_file(original_names[0])"
+    "hdu_file, header, data = ifa.meta.meta_faa.smeargle_open_fits_file(original_names[1])\n",
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +561,7 @@
        "(256, 320)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,22 +573,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x000002722256D240>]"
+       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x000001E244D02E80>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ifa.bravo.end_ave.average_endpoints(original_names[0],16,16,5)"
+    "ifa.bravo.end_ave.average_endpoints(original_names[1],16,16,5,alternate_name='./Data/HelloWorld')"
    ]
   },
   {
