--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -470,6 +470,51 @@
       "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\bravo\\renaming.py:68: TimeWarning: Archiving and copying particularly a lot of large fits files may take a very long time. It is still suggested, but do outside Python. Disable via < copy_data=False >.\n",
       "  smeargle_warning(TimeWarning,(\"Archiving and copying particularly a lot of large fits \"\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pure archive of data is stored in  < ./Data/BravoArchive__20190628_105820.zip >\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['detBias;1Vbot, 001',\n",
+       " 'detBias;2Vupp, 002',\n",
+       " 'detBias;3Vupp, 003',\n",
+       " 'detBias;4Vupp, 004',\n",
+       " 'detBias;5Vupp, 005',\n",
+       " 'detBias;6Vupp, 006',\n",
+       " 'detBias;7Vupp, 007',\n",
+       " 'detBias;8Vupp, 008',\n",
+       " 'detBias;9Vtop, 009',\n",
+       " 'detBias;1Vbot, 010',\n",
+       " 'detBias;2Vupp, 011',\n",
+       " 'detBias;3Vupp, 012',\n",
+       " 'detBias;4Vupp, 013',\n",
+       " 'detBias;5Vupp, 014',\n",
+       " 'detBias;6Vupp, 015',\n",
+       " 'detBias;7Vupp, 016',\n",
+       " 'detBias;8Vupp, 017',\n",
+       " 'detBias;9Vtop, 018',\n",
+       " 'detBias;1Vbot, 019',\n",
+       " 'detBias;2Vupp, 020',\n",
+       " 'detBias;3Vupp, 021',\n",
+       " 'detBias;4Vupp, 022',\n",
+       " 'detBias;5Vupp, 023',\n",
+       " 'detBias;6Vupp, 024',\n",
+       " 'detBias;7Vupp, 025',\n",
+       " 'detBias;8Vupp, 026',\n",
+       " 'detBias;9Vtop, 027',\n",
+       " 'detBias;1Vbot, 028',\n",
+       " 'detBias;2Vupp, 029']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -590,6 +635,87 @@
    "source": [
     "ifa.bravo.end_ave.average_endpoints(original_names[1],16,16,5,alternate_name='./Data/HelloWorld')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = ifa.yankee.SmeargleConfig()\n",
+    "bravo_config = ifa.yankee.BravoConfig()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py:174: InputWarning: The provided file name is missing the .ifaspkl file extension. It has been automatically appended.\n",
+      "  smeargle_warning(InputWarning,(\"The provided file name is missing the .ifaspkl file \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "bravo_config.write_to_file('bravoconfig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "good_config = ifa.yankee.BravoConfig('bravoconfig.ifaspkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportingError",
+     "evalue": "The read configuration file configuration class type is not the same as the calling class type. See:   File:  <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'>    Init:  <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportingError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-661f3a3a95a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbad_config\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mifa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myankee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSmeargleConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'bravoconfig.ifaspkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, config_file_name)\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m             \u001b[1;31m# Assume it is a string and attempt to parse it.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m             \u001b[0mself\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[1;31m# Assume defaults.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36mread_from_file\u001b[1;34m(self, file_name)\u001b[0m\n\u001b[0;32m    118\u001b[0m                                      \"File:  {file_type}    Init:  {init_type} \".format(\n\u001b[0;32m    119\u001b[0m                                          \u001b[0mfile_type\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_config_class\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 120\u001b[1;33m                                          init_type=type(self)))\n\u001b[0m\u001b[0;32m    121\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    122\u001b[0m                 \u001b[1;31m# Seems to be all good.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportingError\u001b[0m: The read configuration file configuration class type is not the same as the calling class type. See:   File:  <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'>    Init:  <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> "
+     ]
+    }
+   ],
+   "source": [
+    "bad_config = ifa.yankee.SmeargleConfig('bravoconfig.ifaspkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportingError",
+     "evalue": "The read configuration file configuration class type is not the same as the calling class type. See:   File: < <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> >   Init: < <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'> > ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportingError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-501d9df7acfa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma_bad_config\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mifa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myankee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBravoConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test.ifaspkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, config_file_name)\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m             \u001b[1;31m# Assume it is a string and attempt to parse it.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m             \u001b[0mself\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[1;31m# Assume defaults.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36mread_from_file\u001b[1;34m(self, file_name)\u001b[0m\n\u001b[0;32m    118\u001b[0m                                      \"File: < {file_type} >   Init: < {init_type} > \".format(\n\u001b[0;32m    119\u001b[0m                                          \u001b[0mfile_type\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_config_class\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 120\u001b[1;33m                                          init_type=type(self)))\n\u001b[0m\u001b[0;32m    121\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    122\u001b[0m                 \u001b[1;31m# Seems to be all good.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportingError\u001b[0m: The read configuration file configuration class type is not the same as the calling class type. See:   File: < <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> >   Init: < <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'> > "
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
