--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -648,25 +648,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py:174: InputWarning: The provided file name is missing the .ifaspkl file extension. It has been automatically appended.\n",
-      "  smeargle_warning(InputWarning,(\"The provided file name is missing the .ifaspkl file \"\n"
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py:189: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
+      "  smeargle_warning(OverwriteWarning,(\"There exists a file with the provided name. \"\n"
      ]
     }
    ],
    "source": [
-    "bravo_config.write_to_file('bravoconfig')"
+    "bravo_config.write_to_file('bravoconfig',overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,15 +680,15 @@
    "outputs": [
     {
      "ename": "ImportingError",
-     "evalue": "The read configuration file configuration class type is not the same as the calling class type. See:   File:  <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'>    Init:  <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> ",
+     "evalue": "The read configuration file configuration class type is not the same as the calling class type.  \n  File:  <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'>  \n  Init:  <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> ",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mImportingError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-6-661f3a3a95a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbad_config\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mifa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myankee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSmeargleConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'bravoconfig.ifaspkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, config_file_name)\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m             \u001b[1;31m# Assume it is a string and attempt to parse it.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m             \u001b[0mself\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[1;31m# Assume defaults.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36mread_from_file\u001b[1;34m(self, file_name)\u001b[0m\n\u001b[0;32m    118\u001b[0m                                      \"File:  {file_type}    Init:  {init_type} \".format(\n\u001b[0;32m    119\u001b[0m                                          \u001b[0mfile_type\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_config_class\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 120\u001b[1;33m                                          init_type=type(self)))\n\u001b[0m\u001b[0;32m    121\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    122\u001b[0m                 \u001b[1;31m# Seems to be all good.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportingError\u001b[0m: The read configuration file configuration class type is not the same as the calling class type. See:   File:  <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'>    Init:  <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> "
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, config_file_name)\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m             \u001b[1;31m# Assume it is a string and attempt to parse it.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m             \u001b[0mself\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m             \u001b[1;31m# Assume defaults.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36mread_from_file\u001b[1;34m(self, file_name)\u001b[0m\n\u001b[0;32m    122\u001b[0m                                      \"File:  {file_type}  \\n  Init:  {init_type} \".format(\n\u001b[0;32m    123\u001b[0m                                          \u001b[0mfile_type\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_config_class\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 124\u001b[1;33m                                          init_type=type(self)))\n\u001b[0m\u001b[0;32m    125\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m                 \u001b[1;31m# Seems to be all good.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportingError\u001b[0m: The read configuration file configuration class type is not the same as the calling class type.  \n  File:  <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'>  \n  Init:  <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> "
      ]
     }
    ],
