--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,26 +42,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read a configuration file from a string file name. If it does not exist, a new configuration file will be made rather than the default of overwriting the previous configuration file."
+    "Read a configuration file from a string file name. Please note that errors will be raised if the file name does not have a `.ifaspkl` file extension when reading and writing the files.\n",
+    "\n",
+    "If it does not exist, a new configuration file will be made rather than the default of overwriting the previous configuration file. Of course, if a copy is desired, then change the ``alternate_name`` variable to a valid configuration file name."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "configuration_file_name = ''"
+    "configuration_file_name = \"blew.ifaspkl\"\n",
+    "alternate_name = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Toto partem non mutant | Do not modify all ##\n",
-    "config_class = ifas.yankee.SmeargleConfig()"
+    "config_class = ifas.yankee.SmeargleConfig(configuration_file_name)"
    ]
   },
   {
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +96,7 @@
        "{'data_directory': None, 'voltage_pattern': None}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,24 +109,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It does not serve well to use the entire array for analysis, the `N` number of frames from the beginning and the `M` number of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis"
+    "It does not serve well to use the entire array for analysis, the `start_chunk` number of frames from the beginning and the `end_chunk` number of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'BravoConfig' object has no attribute 'avg_endpts_config'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-8372007bdee7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mconfig_class\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBravoConfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mavg_endpts_config\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'BravoConfig' object has no attribute 'avg_endpts_config'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'fits_file': None,\n",
+       " 'start_chunk': None,\n",
+       " 'end_chunk': None,\n",
+       " 'frame_exposure_time': None}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -146,12 +151,12 @@
    "metadata": {},
    "source": [
     "ECHO-010 Fixing Invalids:\n",
-    "A simple filter that just filters out computationally bad or prohibitive values from the given data array."
+    "A simple filter that just filters out computationally bad or prohibitive values (e.g. NaN, np.Inf)from the given data array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +165,7 @@
        "{'run': False}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +192,7 @@
        "{'run': False, 'x_range': None, 'y_range': None}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,12 +205,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO-270 Minimum Cut: Filtering all pixels with a value strictly less than the provided value."
+    "ECHO-270 Minimum Cut: Filtering all pixels with a value strictly less than ``minimum_value``."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +219,7 @@
        "{'run': False, 'minimum_value': None}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,12 +232,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO-271 Maximum Cut: Filtering all pixels with a value strictly more than the provided value."
+    "ECHO-271 Maximum Cut: Filtering all pixels with a value strictly more than ``maximum_value``"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +246,7 @@
        "{'run': False, 'maximum_value': None}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,12 +259,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO 275 Pixel Truncation: Filters a hard number X highest and Y lowest pixels; is not dependent on the pixel values."
+    "ECHO 275 Pixel Truncation: Filters a hard number of highest (``top_count``) and lowest (``bottom_count``) pixels; is not dependent on the pixel values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +273,7 @@
        "{'run': False, 'top_count': None, 'bottom_count': None}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,12 +286,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO 276 Percent Truncation: Keeps only a percentage of pixels falling between a specified percent range."
+    "ECHO 276 Percent Truncation: Keeps only a percentage of pixels falling between a specified percent range given by ``kept_range``"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +300,7 @@
        "{'run': False, 'kept_range': None}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +327,7 @@
        "{'run': False, 'pixel_list': None}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,12 +340,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO 381 Rectangle Mask: Masks predefined (overlapping or not) rectangles defined by pairs of x-y ranges."
+    "ECHO 381 Rectangle Mask: Masks predefined (overlapping or not) rectangles defined by pairs of ``x_ranges`` and ``y_ranges``."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +354,7 @@
        "{'run': False, 'x_ranges': None, 'y_ranges': None}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,12 +367,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO 382 Column Mask: Masks columns defined by a 0-indexed index list."
+    "ECHO 382 Column Mask: Masks columns defined by a 0-indexed index list provided by ``column_list``."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +381,7 @@
        "{'run': False, 'column_list': None}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,12 +394,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO 383 Row Mask: Masks rows defined by a 0-indexed index list."
+    "ECHO 383 Row Mask: Masks rows defined by a 0-indexed index list provided by ``row_list``."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +408,7 @@
        "{'run': False, 'row_list': None}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +435,7 @@
        "{'run': False}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +462,7 @@
        "{'run': False}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,12 +536,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Histogram plotting functionality. Borrowing mostly from Matplotlib, this plots pixel value histograms. Also, it atempts to fit a gaussian to the values of the histogram's bins; this gaussian may be disabled. The Y axis of the plots may also be logorithmic. "
+    "Histogram plotting functionality. Borrowing mostly from Matplotlib, this plots pixel value histograms. Also, it atempts to fit a gaussian to the values of the histogram's bins; this gaussian may be disabled. The Y axis of the plots may also be logorithmic (this forcefully diables the gaussian because of issues with fitting.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,9 +562,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TerminalError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTerminalError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-c9c81974701e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mraise\u001b[0m \u001b[0mifas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeta\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTerminalError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTerminalError\u001b[0m: "
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -583,6 +600,45 @@
     "# FILE READOUT MANIPULATION\n",
     "\n",
     "This is just the way to write out the configuration file built. The changable parameters (e.g. the file  name) should have already been done at the beginning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It has finished. A configuration file has been written to blew.ifaspkl\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\.conda\\envs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:7: InputWarning: The alternate name is not valid, defaulting to the normal configuration file name.\n",
+      "  import sys\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Toto partem non mutant | Do not modify all ##\n",
+    "final_name = 'Null'\n",
+    "try:\n",
+    "    final_name = alternate_name\n",
+    "    config_class.write_to_file(alternate_name)\n",
+    "except Exception:\n",
+    "    ifas.meta.smeargle_warning(ifas.meta.InputWarning,(\"The alternate name is not valid, \"\n",
+    "                                                       \"defaulting to the normal configuration file name.\"))\n",
+    "    \n",
+    "    final_name = configuration_file_name\n",
+    "    config_class.write_to_file(configuration_file_name)\n",
+    "finally:\n",
+    "    print(\"It has finished. A configuration file has been written to {file_name}\".format(\n",
+    "        file_name=final_name))\n",
+    "        "
    ]
   },
   {
